# rust-derivatives-pricers

./: .gitignore  Cargo.toml  todo.md
src/: lib.rs  parameters.rs  payoffs.rs  products.rs  random.rs  simple_mc.rs  stats_collectors.rs
tests/: simple_mc.rs
