[package]
name = "derivatives_pricer"
version = "0.1.0"
authors = ["Ndil-Adjim Sou Ngadoy <ndiladjim.soungadoy@trinitymirror.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dev-dependencies]
assert_approx_eq = "1.1.0"
